--- a/README
+++ b/README
@@ -28,6 +28,7 @@ Le serveur doit fonctionner sur http://localhost:8080/.
 Node.js Sur le dossier backend avec un autre terminal:
 -> npm install
 -> nodemon server
+-> Lancer le serveur mysql avec systemctl strt mysql.
 Le serveur doit fonctionner sur http://localhost:3000/.
 
 
